--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,16 @@
 [tox]
-envlist = py37,py38
+envlist = py37,py38, coverage
 
 [testenv]
 deps = pytest
 changedir = tests
 commands = pytest
+
+[testenv:coverage]
+deps =
+    pytest
+    coverage
+commands =
+    coverage erase
+    coverage run -m pytest
+    coverage report -m
