Dunno if this works

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,9 @@ commands = pytest
 [testenv:coverage]
 deps =
     pytest
-    coverage
+    codecov
 commands =
     coverage erase
     coverage run -m pytest
     coverage report -m
+    codecov
