Added flake8 to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = python3.7, python3.8, coverage
+envlist = python3.7, python3.8, coverage, lint
 
 [testenv]
 deps = pytest
@@ -15,3 +15,9 @@ commands =
     coverage erase
     coverage run -m pytest
     codecov
+
+[testenv:lint]
+deps =
+    flake8
+
+commands = flake8
