earlier python versions in pipeline

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist = python3.7, python3.8, coverage, lint
+envlist = 
+    python3.0, python3.1, python3.2, python3.3, python3.4,
+    python3.5, python3.6, python3.7, python3.8, coverage, lint
 
 [testenv]
 deps = pytest
